# agentic-mcp-imt

./: .gitignore  Dockerfile.backend  Dockerfile.mcp  LICENSE  README.md  agent_evaluation_report.docx  docker-compose.yaml  evaluation_results.json  pyproject.toml  requirements.txt
agent/: agent_client.py  main.py  mcp.json
agent/api/routes/: chat.py  health.py
agent/api/services/: agent_service.py
agent/config/: constants.py  prompts.py  setting.py
agent/evaluation/: data_set.py  llm_as_a_judge.py  llm_as_a_judge_with_doc.py
agent/graph/: graph_builder.py
agent/graph/nodes/: generate.py
agent/graph/state/: state.py
agent/schemas/: data_input.py  data_output.py  health.py
agent/utils/: custom_exception.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: ChatInput.css  ChatInput.tsx  ChatInterface.css  ChatInterface.tsx  MessageBubble.css  MessageBubble.tsx
mcp_server/config/: constants.py
mcp_server/server/tools/rag/: rag_client.py  rag_server.py
mcp_server/server/tools/rag/chroma_db/: chroma.sqlite3
mcp_server/server/tools/rag/engine/: chunking.py
mcp_server/server/tools/rag/ingestion/: chunking.py  embeddings.py  pdf_loader.py  vector_store.py
mcp_server/utils/: logger.py
