[project]
name = "agentic-mcp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kungsamreth SOK", email = "kungsamreth.sok@etu.mines-ales.fr" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "dagshub>=0.6.3",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.3",
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "mcp-use[search]>=1.3.10",
    "mcp[cli]>=1.14.0",
    "mlflow>=3.7.0",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.8",
    "pymilvus[model]>=2.6.5",
    "pymupdf>=1.26.6",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "textstat>=0.7.11",
]
